// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render query summary 1`] = `
<div>
  <div
    class="sc-qPwwY kAsNeQ"
  >
    <table
      class="sc-pbYdQ ihIQcb"
    >
      <tbody
        class="sc-pkUyL bQnweJ"
      >
        <tr
          class="sc-qXgLg kdfqeA"
        >
          <th
            class="sc-psRme htrpLL"
          >
            Analysis:
          </th>
          <td
            class="sc-qPjXN ftayUG"
          >
            sum
          </td>
        </tr>
        <tr
          class="sc-qXgLg kdfqeA"
        >
          <th
            class="sc-psRme htrpLL"
          >
            Event Stream:
          </th>
          <td
            class="sc-qPjXN ftayUG"
          >
            purchases
          </td>
        </tr>
        <tr
          class="sc-qXgLg kdfqeA"
        >
          <th
            class="sc-psRme htrpLL"
          >
            Target Property:
          </th>
          <td
            class="sc-qPjXN ftayUG"
          >
            <div
              class="sc-pzXPE kIHrir"
            >
              <span>
                item
              </span>
              <span
                class="sc-pIvhh gxbXhU"
              >
                <svg
                  height="10"
                  opacity="1"
                  viewBox="0 0 30 30"
                  width="10"
                >
                  <polygon
                    fill="#77A3BB"
                    points="9.45351896 0 24.453519 15 9.45351896 30 5.55 26.096481 16.6465765 15 5.55 3.90351896"
                  />
                </svg>
              </span>
            </div>
            <div
              class="sc-pzXPE kIHrir"
            >
              <span>
                price
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="sc-qXgLg kdfqeA"
        >
          <th
            class="sc-psRme htrpLL"
          >
            Applied Filters:
          </th>
          <td
            class="sc-qPjXN ftayUG"
          >
            1
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`should render query summary for funnels 1`] = `
<div>
  <div
    class="sc-qPwwY kAsNeQ"
  >
    <table
      class="sc-pbYdQ ihIQcb"
    >
      <tbody
        class="sc-pkUyL bQnweJ"
      >
        <tr
          class="sc-qXgLg kdfqeA"
        >
          <th
            class="sc-psRme htrpLL"
          >
            Analysis:
          </th>
          <td
            class="sc-qPjXN ftayUG"
          >
            funnel
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="sc-pQQXS jsoUMF"
    >
      <div
        class="sc-pZopv fqNZuG"
      >
        <div
          class="sc-oUnPI kXhBts"
        >
          <svg
            height="15"
            opacity="1"
            viewBox="0 0 30 30"
            width="15"
          >
            <polygon
              fill="rgba(79,91,95,0.7)"
              points="9.45351896 0 24.453519 15 9.45351896 30 5.55 26.096481 16.6465765 15 5.55 3.90351896"
            />
          </svg>
        </div>
        <div
          class="sc-pcLhl fqIQzf"
        >
          Step
           
          1
        </div>
        <div
          class="sc-plgXW ZoUoA"
        >
          signups
        </div>
      </div>
    </div>
    <div
      class="sc-pQQXS jsoUMF"
    >
      <div
        class="sc-pZopv fqNZuG"
      >
        <div
          class="sc-oUnPI kXhBts"
        >
          <svg
            height="15"
            opacity="1"
            viewBox="0 0 30 30"
            width="15"
          >
            <polygon
              fill="rgba(79,91,95,0.7)"
              points="9.45351896 0 24.453519 15 9.45351896 30 5.55 26.096481 16.6465765 15 5.55 3.90351896"
            />
          </svg>
        </div>
        <div
          class="sc-pcLhl fqIQzf"
        >
          Step
           
          2
        </div>
        <div
          class="sc-plgXW ZoUoA"
        >
          purchases
        </div>
      </div>
    </div>
  </div>
</div>
`;
